--- a/asset/index.less
+++ b/asset/index.less
@@ -1,3 +1,13 @@
 .oxmod-img-section{
 /* CSS */
+	li{
+		a>img{
+			width: 100%;
+		}
+
+	}
+	.text-box{
+		position: absolute;
+		width: 100%;
+	}
  }
