--- a/asset/index.css
+++ b/asset/index.css
@@ -1,3 +1,1 @@
-.oxmod-img-section{
-/* CSS */
- }
+.oxmod-img-section li a>img{width:100%}.oxmod-img-section .text-box{position:absolute;width:100%}
