--- a/asset/index.css
+++ b/asset/index.css
@@ -1,1 +1,1 @@
-.oxmod-img-section li a>img{width:100%}.oxmod-img-section .text-box{position:absolute;width:100%}
+.oxmod-img-section li{font-size:0;text-align:center}.oxmod-img-section li a>img{width:100%;margin:0}.oxmod-img-section .text-box{position:absolute;width:100%;font-size:14px}
