--- a/asset/index.less
+++ b/asset/index.less
@@ -1,13 +1,17 @@
 .oxmod-img-section{
 /* CSS */
 	li{
+		font-size: 0;
 		a>img{
 			width: 100%;
+			margin:0;
 		}
+		text-align: center;
 
 	}
 	.text-box{
 		position: absolute;
 		width: 100%;
+		font-size: 14px;
 	}
  }
